# codeit_ai_base_project2

./: .env.example  .gitignore  README.md  evaluate.py  generate_dataset.py  main.py  pipeline.py  poc_project2.ipynb  pyproject.toml  run_vllm.sh
RAG_LLM/logs/: (사)벤처기업협회_2024년 벤처확인종합관리시스템 기능 고도화 용역사업 _parsed.txt  (사)부산국제영화제_2024년 BIFF & ACFM 온라인서비스 재개발 및 행사지원시_parsed.txt  (사）한국대학스포츠협의회_KUSF 체육특기자 경기기록 관리시스템 개발_parsed.txt  (재)예술경영지원센터_통합 정보시스템 구축 사전 컨설팅_parsed.txt  2025 구미 아시아육상경기선수권대회 조직위원회_2025 구미아시아육상경_parsed.txt  BioIN_의료기기산업 종합정보시스템(정보관리기관) 기능개선 사업(2차)_parsed.txt  KOICA 전자조달_[긴급] [지문] [국제] 우즈베키스탄 열린 의정활동 상하원 _parsed.txt  경기도 안양시_호계체육관 배드민턴장 및 탁구장 예약시스템 구축 용역_parsed.txt  경기도 평택시_2024년도 평택시 버스정보시스템(BIS) 구축사업_parsed.txt  경기도사회서비스원_2024년 통합사회정보시스템 운영지원_parsed.txt  경상북도 봉화군_봉화군 재난통합관리시스템 고도화 사업(협상)(긴급)_parsed.txt  경희대학교_[입찰공고] 산학협력단 정보시스템 운영 용역업체 선정_parsed.txt  고려대학교_차세대 포털·학사 정보시스템 구축사업_parsed.txt  고양도시관리공사_관산근린공원 다목적구장 홈페이지 및 회원 통합운영_parsed.txt  광주과학기술원_실시간통합연구비관리시스템(RCMS)  연계 모듈 변경 사업_parsed.txt  광주과학기술원_학사시스템 기능개선 사업_parsed.txt  국가과학기술지식정보서비스_통합정보시스템 고도화 용역_parsed.txt  국가철도공단_철도인프라 디지털트윈 정보화전략계획(ISP) 수립 용역(변_parsed.txt  국립인천해양박물관_국립인천해양박물관 해양자료관리시스템 구축 용_parsed.txt  국립중앙의료원_(긴급)「2024년도 차세대 응급의료 상황관리시스템 구축_parsed.txt  국민연금공단_2024년 이러닝시스템 운영 용역_parsed.txt  부산관광공사_경영정보시스템 기능개선_parsed.txt  (+61 more)
config/: config.yaml
data/: data_list.xlsx  eval_set_100.json
debug_tools/: debug_db.py  debug_db_check.py  debug_files.py  debug_ranking.py  debug_retrieval.py  simulate_rerank.py  verify_retrieval.py
legacy/: embeding.py
src/: generator.py  indexer.py  loader.py  retriever.py
(+107 files in other folders)
