[project]
name = "project-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.2.0",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.0",
    "langchain-openai>=1.1.6",
    "langchain-upstage>=0.7.5",
    "pandas>=2.3.3",
    "pymupdf>=1.26.7",
    "python-dotenv>=1.2.1",
    "pywin32>=311; sys_platform == 'win32'",
    "PyYAML>=6.0",
    "rank-bm25>=0.2.2",
]
